--- a/cam/esp32cam/nodejs_server_esp32cam/public/css/style.css
+++ b/cam/esp32cam/nodejs_server_esp32cam/public/css/style.css
@@ -1,7 +1,8 @@
-*, ::after, ::before {
-    box-sizing: border-box;
+*,
+::after,
+::before {
+  box-sizing: border-box;
 }
-
 
 .alert-danger {
   max-width: 500px;
@@ -23,26 +24,25 @@
   width: 100%;
 }
 
-
-.green_circle
-{
+.green_circle {
   background-color: green;
 }
-.yellow_circle
-{
-  background-color: orange;  
+.yellow_circle {
+  background-color: orange;
 }
-.red_circle
-{
-  background-color: red;  
+.red_circle {
+  background-color: red;
 }
 
-
+canvas#canvas {
+  width: 800px;
+  height: 800px;
+}
 
 .page_login,
 .page_display {
-  background-color:#0069d8;
-  color: #FFFFFF;
+  background-color: #0069d8;
+  color: #ffffff;
 }
 
 .page_display .listing_container_wrapper {
@@ -51,45 +51,38 @@
   margin: 50px auto;
 }
 
-.page_display .iotObj
-{
-  background: #FFFFFF;
+.page_display .iotObj {
+  background: #ffffff;
   color: #253858;
-  border:1px solid #FFFFFF;
-  margin:10px;
+  border: 1px solid #ffffff;
+  margin: 10px;
   border-radius: 5px;
-  padding: 10px;  
+  padding: 10px;
 }
-.page_display .iotObj .iotObj_inner
-{
-  padding-right: 40px;  
+.page_display .iotObj .iotObj_inner {
+  padding-right: 40px;
   position: relative;
 }
 
-.page_display .iotObj .name
-{
-  font-size:18px;
+.page_display .iotObj .name {
+  font-size: 18px;
   font-weight: bold;
 }
 
-.page_display .iotObj .lastseen
-{
+.page_display .iotObj .lastseen {
   width: 10px;
   height: 10px;
   border-radius: 50%;
 }
 
 .page_display .iotObj .location,
-.page_display .iotObj .type
-{
-  font-size:12px;
+.page_display .iotObj .type {
+  font-size: 12px;
   margin-bottom: 10px;
   text-transform: capitalize;
-  
 }
 
-.page_display .iotObj .description
-{
+.page_display .iotObj .description {
 }
 
 .page_display .iotObj .actions {
@@ -99,7 +92,7 @@
   top: 0;
 }
 .page_display .iotObj .actions .delete {
-  width:40px;
+  width: 40px;
   height: 40px;
   border-radius: 50%;
   background-color: #0074e0;
@@ -107,35 +100,29 @@
   background-position-y: 1px;
 }
 
-
-
-.page_login .jumbotron
-{
+.page_login .jumbotron {
   padding: 10px;
   max-width: 500px;
-  background-color: #FAFAFA;
-  border: 1px solid #E7E7E7;
+  background-color: #fafafa;
+  border: 1px solid #e7e7e7;
   margin: 50px auto;
-  color:#000000;
+  color: #000000;
 }
 
-.page_login .jumbotron label
-{
+.page_login .jumbotron label {
   display: none;
 }
-.page_login .jumbotron .form-control
-{
+.page_login .jumbotron .form-control {
   padding: 5px;
   width: 100%;
   margin-bottom: 20px;
   border-radius: 5px;
   border: 1px solid #ced4da;
 }
-.page_login .jumbotron button
-{
+.page_login .jumbotron button {
   padding: 5px;
   border-radius: 2px;
   background-color: #0074e0;
-  color:#FFFFFF;
+  color: #ffffff;
   border: none;
 }
