--- a/car/site/styles/globals.css
+++ b/car/site/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: pink;
 }
 
 a {
@@ -11,6 +12,19 @@ a {
   text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+  padding: 24px;
+  border-radius: 8px;
+}
+
+button:hover {
+  transition: 700ms;
+  filter: brightness(0.8);
+}
 * {
+  font-size: 1.1rem;
+  outline: none;
+  border: none;
   box-sizing: border-box;
 }
